# fastapi-todo-list

./: .env.example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  docker-compose.yml  pyproject.toml
src/application/: interactors.py  interfaces.py
src/domain/: entities.py  exceptions.py
src/infra/database/: connection.py  converters.py
src/infra/database/migrations/: env.py
src/infra/database/migrations/versions/: 32d878efa9a9_init.py
src/infra/database/models/: __init__.py  task.py
src/infra/database/repositories/: task.py
src/presentation/api/: config.py  main.py
src/presentation/api/di/: di.py  providers.py  stub.py
src/presentation/api/task/: handlers.py  schemas.py
tests/: conftest.py  mocks.py  test_api.py
